# sargon-mfa

./: .gitignore  .pre-commit-config.yaml  .tarpaulin.toml  Cargo.toml  README.md  _typos.toml  journal.md
.github/workflows/: test.yml
crates/rules/: Cargo.toml
crates/rules-uniffi/: Cargo.toml  build.rs
crates/rules-uniffi/src/: builder.rs  error_conversion.rs  lib.rs  unneeded_when_moved_to_sargon.rs
crates/rules-uniffi/src/models/: factor_source_in_role_builder_validation_status.rs
crates/rules/src/: lib.rs  move_to_sargon.rs
crates/rules/src/matrices/: abstract_matrix_builder_or_built.rs  matrix_of_factor_instances.rs  matrix_of_factor_source_ids.rs  matrix_of_factor_sources.rs  matrix_with_factor_instances.rs  matrix_with_factor_source_ids.rs  matrix_with_factor_sources.rs  mod.rs
crates/rules/src/matrices/builder/: error.rs  matrix_builder.rs  matrix_builder_unit_tests.rs  matrix_template.rs  mod.rs
crates/rules/src/roles/: abstract_role_builder_or_built.rs  general_role_with_hierarchical_deterministic_factor_instances.rs  mod.rs  role_with_factor_instances.rs  roles_with_factor_ids.rs  roles_with_factor_sources.rs
crates/rules/src/roles/builder/: confirmation_roles_builder_unit_tests.rs  mod.rs  primary_roles_builder_unit_tests.rs  recovery_roles_builder_unit_tests.rs  roles_builder.rs  roles_builder_unit_tests.rs
crates/rules/src/roles/factor_levels/: mod.rs
crates/rules/src/roles/factor_levels/factor_instance_level/: primary_role_with_factor_instances.rs  recovery_role_with_factor_instances.rs  role_with_factor_instances.rs
crates/rules/src/roles/factor_levels/factor_source_id_level/: confirmation_role_with_factor_source_ids.rs  primary_role_with_factor_source_ids.rs  recovery_role_with_factor_source_ids.rs  roles_with_factor_ids.rs
crates/rules/src/roles/factor_levels/factor_source_kind_level/: role_template.rs
crates/rules/src/roles/factor_levels/factor_source_level/: confirmation_role_with_factor_sources.rs  primary_role_with_factor_sources.rs  recovery_role_with_factor_sources.rs  roles_with_factor_sources.rs
crates/rules/src/rules/: error.rs
crates/rules/src/security_structure_of_factors/: abstract_security_structure_of_factors.rs  mod.rs  security_structure_of_factor_source_ids.rs  security_structure_of_factor_sources.rs
src/: lib.rs  playground.rs
src/derivation/: mod.rs
src/factor_instance_provider/: derivation_request.rs  factor_instance_provider.rs  mod.rs  next_derivation_peek_outcome.rs  profile_extensions.rs
src/factor_instances_provider/: derive_more.rs  design.md  factor_instances_provider.rs  factor_instances_provider_operations.rs  factor_instances_provider_unit_tests.rs  factor_instances_request_purpose.rs  mod.rs  newly_derived.rs  next_derivation_index_analyzer.rs  rere.rs  split_cache_response.rs
src/gateway/: gateway_read_write.rs  gateway_readonly.rs  mod.rs  on_chain_entities_information.rs  on_chain_entity_securified.rs  on_chain_entity_state.rs  test_gateway.rs
src/pre_derived_keys_cache/: cache_outcome.rs  mod.rs  pre_derived_keys_cache.rs
src/recovery/: entity_recovery_outcome.rs  mod.rs  recover_entity.rs  recovery.rs  uncovered_entity.rs
src/recovery_securify_cache/: derivation_and_analysis.rs  derivation_request.rs  derive_and_analyze.rs  (+15 more)
tests/: main.rs
(+234 files in other folders)
