[workspace]
resolver = "2"
members = ["crates/rules", "crates/rules-uniffi"]

[profile.release]
incremental = false
panic = 'unwind'
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

[workspace.dependencies]
thiserror = "2.0.3"
sargon = { git = "https://github.com/radixdlt/sargon", tag = "1.1.70" }
