[package]
name = "rules"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
sargon = { workspace = true}
serde = { version = "1.0.215", features = ["derive"] }
pretty_assertions = "1.4.1"
serde_json = { version = "1.0.133", features = ["preserve_order"] }
assert-json-diff = "2.0.2"
